# genomics

./: .gitignore  AGENTS.md  CORRECOES_APLICADAS.md  DOWNLOAD_SEQUENCES.md  GIT_ADD_COMMAND.sh  INSTALL_MONSTER.md  INSTALL_NEURAL.md  LICENSE  LONGEVITY_PROJECT.md  LONGEVITY_QUICKSTART.md  Makefile  NEURAL_CHANGELOG.md  NEURAL_INTEGRATION.md  NEURAL_LONGEVITY_DATASET.md  NEURAL_MODULE.md  NEURAL_MODULE_README.md  NEURAL_QUICKSTART.md  OUTPUTS_DISPONIVEIS.md  README.md  RESULTS_NEURAL.md  TAMANHOS_SUPORTADOS.md  USAGE_NEURAL.md  VISUALIZACAO_CORRIGIDA.md  VISUALIZACOES_AVANCADAS.md  build_non_longevous_dataset.py  build_window_and_predict.py  check_alphagenome_outputs.py  check_neural_requirements.sh  check_output_structure.py  check_visualization_api.py  config_human_30x.yaml  config_human_30x_4_people.yaml  config_human_30x_atena.yaml  config_human_30x_low_memory.yaml  config_human_30x_monster.yaml  conta_diferencas_genes.cpp  demo_neural_module.sh  example_sequence.fasta  fix_reference_mismatch.sh  fix_vep_dependencies.sh  (+31 more)
FROGAncestryCalc/: .gitignore  FROGAncestryCalc.properties  MODIFICACOES.md  MODIFICATIONS.md  README.md  population_mapping_1000genomes.csv  population_mapping_complete.csv  run.sh
build_non_longevous_dataset/: ESTRUTURA.md  IMPLEMENTACAO.md  PYTORCH_DATASET_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  build_non_longevous_dataset.py  build_window_and_predict.py  dataset_builder.py  em_caso_de_failed_samples.md  frog_ancestry_parser.py  genomic_dataset.py
configs/: README.md  config_human_30x_4_people.yaml  config_human_30x_latest_ref.yaml
(+666 files in other folders)
